created login handlebar and js file

--- a/test.html
+++ b/test.html
@@ -26,23 +26,22 @@
 
       <div class="card">
         <div class="card-header">
-          <h2 class="text-center">Sign Up</h2>
+          <h2 class="text-center">Login</h2>
         </div>
-        <form id="signup-form" class="card-body d-flex flex-column justify-content-center align-items-center p-5">
+        <form id="login-form" class="card-body d-flex flex-column justify-content-center align-items-center p-5">
           <div>
             <label for="username-input-login">Username</label>
-            <input type="text" id="username-input-signup" />
+            <input type="text" id="username-input-login" />
           </div>
           <div>
-            <label for="password-input-signup" class="form-label">Password</label>
-            <input type="password" id="password-input-singup" />
+            <label for="password-input-login" class="form-label">Password</label>
+            <input type="password" id="password-input-login" />
           </div>
-          <button type="submit" id="signup-btn" class="btn col-2 text-white bg-success p-3 rounded m-3">Sign Up!</button>
-          <a type="button" class="btn col-2 text-white bg-primary p-3 rounded m-3" href="/login">Log In Instead</a>
-
+          <button type="submit" id="login-btn" class="btn col-2 text-white bg-success p-3 rounded m-3">Login!</button>
+          <a type="button" class="btn col-2 text-white bg-primary p-3 rounded m-3" href="/signup">Sign up instead</a>
         </form>
       </div>
-      <script src="/js/signup.js"></script>
+      <script src="/js/login.js"></script>
 
 
 
